Creacion del header de la pagina web

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <header>
-
+    <section>Get Early Access</section>
+    <section>A New Way To Start Business</section>
+    <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem dicta corrupti temporibus eius, laudantium nesciunt reprehenderit vitae quas inventore sequi est consequuntur adipisci non ut earum asperiores. Obcaecati, qui quibusdam!</article>
+    <button>Get Started</button>
 </header>
 </body>
 </html>
