Se agrego el primer section de la pagina web

--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <title>Document</title>
 </head>
 <header>
+    <img src="./assets/images/logo.png" alt="">
     <section>Get Early Access</section>
     <section>A New Way To Start Business</section>
     <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem dicta corrupti temporibus eius, laudantium nesciunt reprehenderit vitae quas inventore sequi est consequuntur adipisci non ut earum asperiores. Obcaecati, qui quibusdam!</article>
     <button>Get Started</button>
+    <section>
+        <h2>Smartest protection for your site</h2>
+        <img src="./assets/images/smart-protect-1.jpg" alt="">
+        <article><h3>Anti-Spam</h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur explicabo commodi, cupiditate ut recusandae maxime magnam fugit neque fugiat incidunt dicta odit nulla obcaecati dolores tempora in quae beatae omnis?
+        </article>
+        <img src="./assets/images/smart-protect-2.jpg" alt="">
+        <article><h3>Phising Detect</h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur explicabo commodi, cupiditate ut recusandae maxime magnam fugit neque fugiat incidunt dicta odit nulla obcaecati dolores tempora in quae beatae omnis?
+        </article>
+        <img src="./assets/images/smart-protect-3.jpg" alt="">
+        <article><h3>Smart Scan</h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur explicabo commodi, cupiditate ut recusandae maxime magnam fugit neque fugiat incidunt dicta odit nulla obcaecati dolores tempora in quae beatae omnis?
+        </article>
+    </section>
 </header>
 </body>
 </html>
