--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur explicabo commodi, cupiditate ut recusandae maxime magnam fugit neque fugiat incidunt dicta odit nulla obcaecati dolores tempora in quae beatae omnis?
         </article>
     </section>
+    <section>
+        <h2>Take a look inside</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus dicta aperiam voluptatum libero sapiente rerum sequi minima aut impedit quod mollitia, voluptatem animi? Sint, nisi. Pariatur expedita nihil quaerat voluptate!</p>
+        <button>Learn More</button>
+        <img src="./assets/images/feature-1.png" alt="">
+
+        <img src="./assets/images/feature-2.png" alt="">
+        <h2>Safe and reliable</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit aliquam quisquam dicta velit. Rem rerum pariatur ea in magni sint delectus corporis autem nam! Omnis praesentium sequi fugiat odit vero?</p>
+        <button>Learn More</button>
+    </section>
+    
 </header>
 </body>
 </html>
