Se agrego el tercer section de la pagina web

--- a/index.html
+++ b/index.html
@@ -37,7 +37,43 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit aliquam quisquam dicta velit. Rem rerum pariatur ea in magni sint delectus corporis autem nam! Omnis praesentium sequi fugiat odit vero?</p>
         <button>Learn More</button>
     </section>
-    
+    <section>
+        <h2>Check our pricing</h2>
+
+        <aside>
+            <h3>Premium</h3>
+            <h4>$</h4>
+            <h2>10</h2>
+            <h4>/mo</h4>
+            <h3>Up to 15 Documents</h3>
+            <h3>Up to 10 Reviews</h3>
+            <h3>25 team Members</h3>
+            <h3>Limited support</h3>
+            <button>Get free</button>
+        </aside>
+        <aside>
+            <h3>Startup</h3>
+            <h4>$</h4>
+            <h2>0</h2>
+            <h4>/mo</h4>
+            <h3>Up to 5 Documents</h3>
+            <h3>Up to 3 Reviews</h3>
+            <h3>5 team Members</h3>
+            <h3>Limited support</h3>
+            <button>Get free</button>
+        </aside>
+        <aside>
+            <h3>Professional</h3>
+            <h4>$</h4>
+            <h2>30</h2>
+            <h4>/mo</h4>
+            <h3>Unlimited Documents</h3>
+            <h3>Unlimited Reviews</h3>
+            <h3>Unlimited Members</h3>
+            <h3>Unlimited support</h3>
+            <button>Get free</button>
+        </aside>
+    </section>
 </header>
 </body>
 </html>
