Se agrego el cuarto y quinto section de la pagina web

--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
             <button>Get free</button>
         </aside>
     </section>
+    <section>
+        <img src="./assets/images/client-1.png" alt="">
+        <img src="./assets/images/client-2.png" alt="">
+        <img src="./assets/images/client-3.png" alt="">
+        <img src="./assets/images/client-4.png" alt="">
+        <img src="./assets/images/client-5.png" alt="">
+        <img src="./assets/images/client-6.png" alt="">
+    </section>
+    <section>
+        <h2>Contact Us</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam fugit eligendi molestias exercitationem neque dicta vel est ea, libero incidunt soluta voluptas eos iure quae suscipit dolores. Distinctio, fuga suscipit!</p>
+        <p>Email: company_email@com</p>
+        <p>Phone: 361-688-5824</p>
+        <P>4826 White Avenue,Corpus Christi,Texas</P>
+
+        <h5>Your name</h5>
+        <input type="text">
+        <h5>Your Email</h5>
+        <input type="text">
+        <h5>Message</h5>
+        <textarea name="" id=""></textarea>
+        <button>Submit</button>
+    </section>
 </header>
 </body>
 </html>
