Se corrigieron la posicion y ausencia de algunas etiquetas de nuestro codigo html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <section>A New Way To Start Business</section>
     <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem dicta corrupti temporibus eius, laudantium nesciunt reprehenderit vitae quas inventore sequi est consequuntur adipisci non ut earum asperiores. Obcaecati, qui quibusdam!</article>
     <button>Get Started</button>
-    <section>
+</header>
+<main>
+        <section>
         <h2>Smartest protection for your site</h2>
         <img src="./assets/images/smart-protect-1.jpg" alt="">
         <article><h3>Anti-Spam</h3>
@@ -97,6 +99,6 @@
         <textarea name="" id=""></textarea>
         <button>Submit</button>
     </section>
-</header>
+</main>
 </body>
 </html>
