Se creo el estilo para el header, con sus respectivos id y class

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
 <header>
-    <img src="./assets/images/logo.png" alt="">
-    <section>Get Early Access</section>
-    <section>A New Way To Start Business</section>
-    <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem dicta corrupti temporibus eius, laudantium nesciunt reprehenderit vitae quas inventore sequi est consequuntur adipisci non ut earum asperiores. Obcaecati, qui quibusdam!</article>
-    <button>Get Started</button>
+    <div id="tittleone">
+    <img src="./assets/images/logo.png" alt="" id="logo">
+    <section >Get Early Access</section>
+</div>
+<div id="tittletwo">
+    <section class="one">A New Way <section class="onetwo">To Start Business</section></section>
+    <article class="two">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem dicta corrupti temporibus eius, laudantium nesciunt reprehenderit vitae quas inventore sequi est consequuntur adipisci non ut earum asperiores. Obcaecati, qui quibusdam!</article>
+    <button id="buttomtittle">Get Started</button>
+</div>
 </header>
 <main>
         <section>
