Se empezo con el tercer seccion de la pagina

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </aside>
     </aside>
     </section>
-    <section>
+    <section id="pricing">
         <h2>Check our pricing</h2>
 
-        <aside>
+        <aside id="premium">
             <h3>Premium</h3>
             <h4>$</h4>
             <h2>10</h2>
