Se termino con el tercer seccion de la pagina

--- a/index.html
+++ b/index.html
@@ -56,42 +56,39 @@
     </aside>
     </aside>
     </section>
+       <h2 id="tittlepricing">Check our pricing</h2>
     <section id="pricing">
-        <h2>Check our pricing</h2>
-
+     
         <aside id="premium">
             <h3>Premium</h3>
-            <h4>$</h4>
-            <h2>10</h2>
-            <h4>/mo</h4>
+            <p>$ <span>0</span>/mo</p>
             <h3>Up to 15 Documents</h3>
             <h3>Up to 10 Reviews</h3>
             <h3>25 team Members</h3>
             <h3>Limited support</h3>
-            <button>Get free</button>
+            <button id="buttomtarjet">Get free</button>
         </aside>
-        <aside>
+        <aside id="startup">
+            <div id="textstartup">
             <h3>Startup</h3>
-            <h4>$</h4>
-            <h2>0</h2>
-            <h4>/mo</h4>
+            <p>$ <span>10</span>/mo</p>
             <h3>Up to 5 Documents</h3>
             <h3>Up to 3 Reviews</h3>
             <h3>5 team Members</h3>
             <h3>Limited support</h3>
-            <button>Get free</button>
+            <button id="buttomstar">Get free</button>
+        </div>
         </aside>
-        <aside>
+        <aside id="professional">
             <h3>Professional</h3>
-            <h4>$</h4>
-            <h2>30</h2>
-            <h4>/mo</h4>
+            <p>$ <span>30</span>/mo</p>
             <h3>Unlimited Documents</h3>
             <h3>Unlimited Reviews</h3>
             <h3>Unlimited Members</h3>
             <h3>Unlimited support</h3>
-            <button>Get free</button>
+            <button id="buttomtarjet">Get free</button>
         </aside>
+   
     </section>
     <section>
         <img src="./assets/images/client-1.png" alt="">
