--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </aside>
    
     </section>
-    <section>
+    <section id="company">
         <img src="./assets/images/client-1.png" alt="">
         <img src="./assets/images/client-2.png" alt="">
         <img src="./assets/images/client-3.png" alt="">
@@ -98,22 +98,41 @@
         <img src="./assets/images/client-5.png" alt="">
         <img src="./assets/images/client-6.png" alt="">
     </section>
-    <section>
-        <h2>Contact Us</h2>
+    <section id="contact">
+        <section id="infocontact">
+        <h2 id="titlecontact">Contact Us</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam fugit eligendi molestias exercitationem neque dicta vel est ea, libero incidunt soluta voluptas eos iure quae suscipit dolores. Distinctio, fuga suscipit!</p>
-        <p>Email: company_email@com</p>
-        <p>Phone: 361-688-5824</p>
-        <P>4826 White Avenue,Corpus Christi,Texas</P>
-
-        <h5>Your name</h5>
-        <input type="text">
-        <h5>Your Email</h5>
-        <input type="text">
-        <h5>Message</h5>
-        <textarea name="" id=""></textarea>
-        <button>Submit</button>
+        <p id="contactinfo">Email: company_email@com</p>
+        <p id="contactinfo">Phone: 361-688-5824</p>
+        <P id="contactinfo">4826 White Avenue,Corpus Christi,Texas</P>
     </section>
+    <section id="contactque">
+    <div id="questone">
+        <div id="name">
+        <h5>Your name</h5>
+        <input type="text" id="nameque">
+    </div>
+    <div id="email">
+        <h5>Your Email</h5>
+        <input type="text" id="emailque">
+    </div>
+    </div>
+    <div id="message">
+        <h5>Message</h5>
+        <textarea name="" id="messageque"></textarea>
+        <button id="buttomcontact">Submit</button>
+    </div>
+    </section>
+</section>
 </main>
-<footer>Copyright &copy; 2018 Chen, Yi-Ya.</footer>
+<footer><aside id="textfoot">Copyright &copy; 2018 Chen, Yi-Ya.</aside>
+    <div id="imgfoot">
+<img src="./assets/images/logo_facebook.png" alt="" id="redes">
+<img src="./assets/images/twitter.png" alt="" id="redes">
+<img src="./assets/images/m_imagen.png" alt="" id="redes">
+<img src="./assets/images/linkedin.png" alt="" id="redes">
+</div>
+
+</footer>
 </body>
 </html>
