--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img src="./assets/images/client-3.png" alt="">
         <img src="./assets/images/client-4.png" alt="">
         <img src="./assets/images/client-5.png" alt="">
-        <img src="./assets/images/client-6.png" alt="">
+        <img src="./assets/images/client-6.png" alt="" class="img1">
     </section>
     <section id="contact">
         <section id="infocontact">
