Se termino la pagina web con todos sus @media

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <main>
     <h2 class="titt">Smartest protection for your site</h2>
     <aside id="image1">
-    <img src="./assets/images/smart-protect-1.jpg" alt="" >
-    <img src="./assets/images/smart-protect-2.jpg" alt="" >
-    <img src="./assets/images/smart-protect-3.jpg" alt="" >
+    <img src="./assets/images/smart-protect-1.jpg" alt="" id="imgsecciontwo">
+    <img src="./assets/images/smart-protect-2.jpg" alt="" id="imgsecciontwo">
+    <img src="./assets/images/smart-protect-3.jpg" alt="" id="imgsecciontwo">
 </aside>
 
         <section id="secctionone">
@@ -91,11 +91,11 @@
    
     </section>
     <section id="company">
-        <img src="./assets/images/client-1.png" alt="">
-        <img src="./assets/images/client-2.png" alt="">
-        <img src="./assets/images/client-3.png" alt="">
-        <img src="./assets/images/client-4.png" alt="">
-        <img src="./assets/images/client-5.png" alt="">
+        <img src="./assets/images/client-1.png" alt="" class="img2">
+        <img src="./assets/images/client-2.png" alt="" class="img2">
+        <img src="./assets/images/client-3.png" alt="" class="img2">
+        <img src="./assets/images/client-4.png" alt="" class="img2">
+        <img src="./assets/images/client-5.png" alt="" class="img2">
         <img src="./assets/images/client-6.png" alt="" class="img1">
     </section>
     <section id="contact">
