--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
         <section id="secctionone">
         
-        
         <article id="text"><h3>Anti-Spam</h3>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur explicabo commodi, cupiditate ut recusandae maxime magnam fugit neque fugiat incidunt dicta odit nulla obcaecati dolores tempora in quae beatae omnis?
         </article>
@@ -99,6 +98,7 @@
         <img src="./assets/images/client-6.png" alt="" class="img1">
     </section>
     <section id="contact">
+        <img src="assets/images/bmw.jpg" alt="" class="bmw">
         <section id="infocontact">
         <h2 id="titlecontact">Contact Us</h2>
         <p id="inf">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam fugit eligendi molestias exercitationem neque dicta vel est ea, libero incidunt soluta voluptas eos iure quae suscipit dolores. Distinctio, fuga suscipit!</p>
